fix: [CDNG-11096]: layout issue with console view (#4546)

--- a/src/modules/70-pipeline/pages/execution/ExecutionLandingPage/ExecutionLandingPage.module.scss
+++ b/src/modules/70-pipeline/pages/execution/ExecutionLandingPage/ExecutionLandingPage.module.scss
@@ -1,3 +1,5 @@
+@import '../ExecutionVars';
+
 .main {
   height: 100vh;
   display: grid;
@@ -14,6 +16,7 @@
   .header {
     padding: var(--spacing-5) var(--spacing-7);
     border-bottom: 1px solid var(--grey-200);
+    height: $header-height;
   }
 
   .childContainer {
@@ -21,5 +24,6 @@
     flex: 1 0 auto;
     display: flex;
     flex-direction: column;
+    height: calc(100vh - #{$header-height + $tabs-height});
   }
 }
