--- a/src/modules/70-pipeline/pages/execution/ExecutionLandingPage/ExecutionTabs/ExecutionTabs.module.scss
+++ b/src/modules/70-pipeline/pages/execution/ExecutionLandingPage/ExecutionTabs/ExecutionTabs.module.scss
@@ -6,6 +6,7 @@
   padding: var(--spacing-none) var(--spacing-medium) var(--spacing-none) var(--spacing-xxlarge);
   height: $tabs-height;
   border-bottom: 4px solid var(--primary-3);
+  flex: 0 0 auto;
 
   & .tabs {
     display: flex;
