--- a/src/modules/70-pipeline/pages/execution/ExecutionPipelineView/ExecutionLogView/ExecutionLogView.module.scss
+++ b/src/modules/70-pipeline/pages/execution/ExecutionPipelineView/ExecutionLogView/ExecutionLogView.module.scss
@@ -13,6 +13,9 @@
 .stageSelector {
   width: 100%;
   display: block;
+  position: sticky;
+  top: 0;
+  z-index: 10;
 
   :global(.bp3-popover-target) {
     width: 100%;
