--- a/src/modules/70-pipeline/pages/execution/_ExecutionVars.scss
+++ b/src/modules/70-pipeline/pages/execution/_ExecutionVars.scss
@@ -1,3 +1,2 @@
-$header-height: 56px;
-$details-height: 56px;
+$header-height: 117px;
 $tabs-height: 50px;
